--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -33,3 +33,7 @@ name = "Resources"
 [[pages]]
 path = "pages/MissionCrest.py"
 name = "Mission Crest Reports"
+
+[[pages]]
+path = "pages/BetterRAG.py"
+name = "Better RAG"
