--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,54 @@ numpy==1.26.4
 openai==1.45.0
 pandas==2.0.2
 pinecone==5.1.0
-plotly==5.23.0
-pymongo==4.8.0
-pytz==2023.3
-Requests==2.32.3
 semantic_router==0.0.65
-spacy==3.7.6
 st_pages==1.0.1
-streamlit==1.38.0
 websocket_client==0.58.0
+
+murmurhash==1.0.10
+narwhals==1.5.5
+packaging==24.1
+pillow==10.4.0
+pinecone-client==4.1.1
+pinecone-plugin-assistant==0.1.3
+pinecone-plugin-interface==0.0.7
+plotly==5.23.0
+preshed==3.0.9
+protobuf==5.27.3
+pyarrow==17.0.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pymongo==3.11.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.20.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.4
+smmap==5.0.1
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+st-pages==1.0.1
+streamlit==1.37.1
+tenacity==8.5.0
+thinc==8.2.5
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.66.5
+typer==0.12.5
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.16.0
