--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ pinecone==5.1.0
 semantic_router==0.0.65
 st_pages==1.0.1
 websocket_client==0.58.0
-
 murmurhash==1.0.10
 narwhals==1.5.5
 packaging==24.1
@@ -54,3 +53,4 @@ urllib3==2.2.2
 wasabi==1.1.3
 weasel==0.4.1
 wrapt==1.16.0
+dnspython==2.3.0
