--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,4 @@ wrapt==1.16.0
 dnspython==2.3.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 kaleido==0.2.1
+cohere==4.57
